# UserPermission

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
crates/user-permission/: Cargo.toml
crates/user-permission-cli/: Cargo.toml
crates/user-permission-cli/src/: main.rs
crates/user-permission-core/: Cargo.toml
crates/user-permission-python/: Cargo.toml
crates/user-permission-python/src/: database.rs  error.rs  group.rs  lib.rs  password.rs  server.rs  token.rs  user.rs
crates/user-permission-web/: Cargo.toml
crates/user-permission-web/src/: api.rs  auth.rs  error.rs  lib.rs  state.rs
crates/user-permission/src/: lib.rs  webui.rs
crates/user-permission/templates/: base.html
crates/user-permission/tests/: integration.rs
python/user_permission/: __init__.py  __init__.pyi  __main__.py
src/user_permission/: __init__.py  cli.py  database.py  fastapi.py  group.py  password.py  relay.py  server.py  token.py  user.py  webui.py
tests/python/: test_user_permission.py
