[package]
name = "user-permission-web"
description = "axum router (REST API + HTMX WebUI) for user-permission"
readme = "README.md"
keywords = ["auth", "axum", "users", "permissions"]
categories = ["authentication", "web-programming::http-server"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
user-permission = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
reqwest = { workspace = true }
